--- a/DeadlinesManager/Details/ProjectDetails.storyboard
+++ b/DeadlinesManager/Details/ProjectDetails.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="deQ-gq-KeG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yLW-Lg-VSH">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
@@ -148,7 +148,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="koZ-B8-gQx"/>
                     </view>
-                    <navigationItem key="navigationItem" id="e3z-LL-TXi"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="e3z-LL-TXi"/>
                     <connections>
                         <outlet property="descriptionTextView" destination="aIC-RM-jer" id="kex-Ro-5iA"/>
                         <outlet property="nameLabel" destination="doe-qo-HWC" id="0jH-we-usj"/>
@@ -367,17 +367,14 @@
         <scene sceneID="BEp-1O-d4s">
             <objects>
                 <navigationController id="deQ-gq-KeG" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bjO-aI-LXB">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="bjO-aI-LXB">
+                        <rect key="frame" x="0.0" y="44" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
-                    <connections>
-                        <segue destination="yLW-Lg-VSH" kind="relationship" relationship="rootViewController" id="g0t-TX-2kd"/>
-                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="12i-I6-YDb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1216" y="1456"/>
+            <point key="canvasLocation" x="-1343" y="1456"/>
         </scene>
     </scenes>
     <resources>
