--- a/DeadlinesManager/Details/ProjectDetails.storyboard
+++ b/DeadlinesManager/Details/ProjectDetails.storyboard
@@ -7,19 +7,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="vCr-jj-sqF">
-            <objects>
-                <navigationController storyboardIdentifier="navigationC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="FCs-wR-y6h" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="juH-oQ-UjA">
-                        <rect key="frame" x="0.0" y="44" width="375" height="96"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9hw-KG-sjv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1244" y="1456"/>
-        </scene>
         <!--Title-->
         <scene sceneID="dEN-dh-gIK">
             <objects>
@@ -30,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="3Xz-z8-Sb4">
-                                <rect key="frame" x="0.0" y="39" width="375" height="773"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="768"/>
                                 <color key="backgroundColor" red="0.94857853650000001" green="0.95024508240000005" blue="0.96689516310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.94857853650000001" green="0.95024508240000005" blue="0.96689516310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="tQs-Qy-y2P">
@@ -157,11 +144,11 @@
                             <constraint firstAttribute="trailing" secondItem="3Xz-z8-Sb4" secondAttribute="trailing" id="0qf-jC-cff"/>
                             <constraint firstAttribute="bottom" secondItem="3Xz-z8-Sb4" secondAttribute="bottom" id="2gN-by-ed1"/>
                             <constraint firstItem="3Xz-z8-Sb4" firstAttribute="leading" secondItem="koZ-B8-gQx" secondAttribute="leading" id="J3M-1h-s3s"/>
-                            <constraint firstItem="3Xz-z8-Sb4" firstAttribute="top" secondItem="Mq9-dZ-0La" secondAttribute="top" constant="39" id="a5W-bW-c4O"/>
+                            <constraint firstItem="3Xz-z8-Sb4" firstAttribute="top" secondItem="koZ-B8-gQx" secondAttribute="top" id="a5W-bW-c4O"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="koZ-B8-gQx"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" leftItemsSupplementBackButton="YES" id="kTH-fI-nPI">
+                    <navigationItem key="navigationItem" title="Title" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="kTH-fI-nPI">
                         <rightBarButtonItems>
                             <barButtonItem id="HUV-ac-qsr">
                                 <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="fPj-1y-jXm">
